Shoppiq: Migrate application to global exception handling
Signed-off-by: prabhatkrmishra <mprabhat774@gmail.com>